# Mentor_Logic_Engine

./: .env.example  .gitignore  DEVLOG.md  DOCKER_GUIDE.md  Dockerfile  Guide.md  LICENSE  README.md  compose.yml  pyproject.toml
scripts/: test_gemini.py
src/mle/: __init__.py
src/mle/orchestration/: __init__.py  graph.py
src/mle/perception/: __init__.py  gemini_vlm.py  qwen_vlm.py  vlm.py
src/mle/playground/: app.py
src/mle/reasoning/: __init__.py  thinking.py
src/mle/verification/: __init__.py  sympy_engine.py
tests/test_perception/: test_qwen_vlm.py  test_vlm.py
tests/test_verification/: test_sympy_engine.py
